--- a/src/box.css
+++ b/src/box.css
@@ -17,6 +17,7 @@
 }
 .box {
   background-color: lightgreen;
-  border: 1px solid black;
+  border: 1px solid grey;
   text-align:center;
+  border-radius: 2px;
 }
